--- a/My-HTML-CSS/style.css
+++ b/My-HTML-CSS/style.css
@@ -1,11 +1,15 @@
 .grid-layout-a {
- display: flex;
+  width: 25%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 4px;
 }
 .gid-item-a {
-    width: 60px;
-    padding: 10px;
-    color: #fff;
-    background-color: blue;
-    border-radius: 6px;
-    text-align: center;
+  width: 60px;
+  padding: 10px;
+  color: #fff;
+  background-color: blue;
+  border-radius: 6px;
+  text-align: center;
 }
