--- a/My-HTML-CSS/style.css
+++ b/My-HTML-CSS/style.css
@@ -1,3 +1,4 @@
+/* grid-layout-a */
 .grid-layout-a {
   width: 25%;
   display: flex;
@@ -10,6 +11,18 @@
   padding: 10px;
   color: #fff;
   background-color: blue;
+  border-radius: 6px;
+  text-align: center;
+}
+/* gird-layout-b */
+.grid-layout-b {
+
+}
+.grid-item-b {
+width: 130px;
+  padding: 10px;
+  color: #fff;
+  background-color: red;
   border-radius: 6px;
   text-align: center;
 }
