--- a/My-HTML-CSS/style.css
+++ b/My-HTML-CSS/style.css
@@ -16,10 +16,14 @@
 }
 /* gird-layout-b */
 .grid-layout-b {
-    
+  width: 25%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 8px;
 }
 .grid-item-b {
-  width: 130px;
+  width: 140px;
   padding: 10px;
   color: #fff;
   background-color: red;
