grid-item-cを増やしました

--- a/My-HTML-CSS/style.css
+++ b/My-HTML-CSS/style.css
@@ -37,7 +37,7 @@
   width: 60px;
   padding: 10px;
   color: #fff;
-  background-color: yellow;
+  background-color: #fbbc04;
   border-radius: 6px;
   text-align: center;
 }
