--- a/My-HTML-CSS/style.css
+++ b/My-HTML-CSS/style.css
@@ -1,11 +1,13 @@
-/* grid-layout-a */
-.grid-layout-a {
+/* grid-layout */
+.grid-layout {
   width: 25%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 4px;
 }
+
+/* grid-item */
 .grid-item-a {
   width: 60px;
   padding: 10px;
@@ -13,14 +15,6 @@
   background-color: blue;
   border-radius: 6px;
   text-align: center;
-}
-/* gird-layout-b */
-.grid-layout-b {
-  width: 25%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 8px;
 }
 .grid-item-b {
   width: 140px;
@@ -30,14 +24,8 @@
   border-radius: 6px;
   text-align: center;
 }
-/* grid-layout-c */
-.grid-layout-c {
-  width: 40%;
-  display: flex;
-  gap: 4px;
-}
 .grid-item-c {
-  width: 60px;
+  width: 30px;
   padding: 10px;
   color: #fff;
   background-color: #fbbc04;
