--- a/My-HTML-CSS/style.css
+++ b/My-HTML-CSS/style.css
@@ -1,6 +1,11 @@
+.grid-container {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
 /* grid-layout */
 .grid-layout {
-  max-width: 400px;
+  /* max-width: 400px; */
   width: 100%;
   display: flex;
   flex-wrap: wrap;
